--- a/Deploiement_de_machine/docker-compose.yml
+++ b/Deploiement_de_machine/docker-compose.yml
@@ -112,7 +112,7 @@ services:
         ipv4_address: 192.168.0.8
     environment:
       - DISPLAY
-    command: bash -c "apt-get update && apt-get install -y xfce4 && startxfce4"
+    command: bash -c "apt-get update && apt-get install -y xfce4"
     restart: always
 
 networks:
