--- a/playbook/dns_setup.yml
+++ b/playbook/dns_setup.yml
@@ -1,4 +1,3 @@
-# dns.yml
 - name: Configure DNS Server
   hosts: dns
   become: true
@@ -7,7 +6,6 @@
       apt:
         name: bind9
         state: present
-      tags: dns
 
     - name: Configure Bind for local domain
       template:
@@ -19,6 +17,20 @@
       template:
         src: templates/db.domain.local.j2
         dest: /etc/bind/db.domain.local
+      notify: Restart Bind
+
+    - name: Add machines to DNS domain
+      lineinfile:
+        path: /etc/bind/db.domain.local
+        line: "{{ item.ip }}    {{ item.hostname }}"
+      loop:
+        - { ip: "192.168.0.2", hostname: "dns" }
+        - { ip: "192.168.0.3", hostname: "ad" }
+        - { ip: "192.168.0.4", hostname: "ldap" }
+        - { ip: "192.168.0.5", hostname: "home_assistant" }
+        - { ip: "192.168.0.6", hostname: "openvpn" }
+        - { ip: "192.168.0.7", hostname: "opnsense" }
+        - { ip: "192.168.0.8", hostname: "client" }
       notify: Restart Bind
 
   handlers:
