--- a/playbook/main.yml
+++ b/playbook/main.yml
@@ -10,6 +10,13 @@
         state: present
       when: ansible_connection == "docker"  # Vérifie si la connexion est via Docker (important pour les conteneurs)
 
+    # Vérifier si sshpass est installé (pour utiliser des mots de passe dans SSH)
+    - name: Installer sshpass si nécessaire
+      apt:
+        name: sshpass
+        state: present
+      when: ansible_ssh_user is defined and ansible_ssh_pass is defined
+
     # Autoriser la connexion root via SSH
     - name: Permettre la connexion root via SSH
       lineinfile:
@@ -37,6 +44,7 @@
       service:
         name: ssh
         state: restarted
+
 - name: Configuration du serveur DNS
   hosts: dns
   become: true
