test ssh direct dans docker compose

--- a/Deploiement_de_machine/docker-compose.yml
+++ b/Deploiement_de_machine/docker-compose.yml
@@ -15,6 +15,8 @@ services:
     volumes:
       - ./config/dns:/data
     restart: always
+    # Installer SSH sur ce conteneur
+    command: bash -c "apt-get update && apt-get install -y openssh-server && service ssh start && /bin/bash"
 
   # Active Directory avec Samba
   ad:
@@ -35,6 +37,8 @@ services:
     volumes:
       - ./config/ad:/etc/samba
     restart: always
+    # Ajouter SSH sur ce conteneur
+    command: bash -c "apt-get update && apt-get install -y openssh-server && service ssh start && /bin/bash"
 
   # Serveur LDAP
   ldap:
@@ -54,6 +58,8 @@ services:
       - ./config/ldap:/var/lib/ldap
       - ./config/slapd.d:/etc/ldap/slapd.d
     restart: always
+    # Ajouter SSH sur ce conteneur
+    command: bash -c "apt-get update && apt-get install -y openssh-server && service ssh start && /bin/bash"
 
   # Serveur Home Assistant
   home_assistant:
@@ -69,6 +75,8 @@ services:
     volumes:
       - ./config/home_assistant:/config
     restart: always
+    # Ajouter SSH sur ce conteneur
+    command: bash -c "apt-get update && apt-get install -y openssh-server && service ssh start && /bin/bash"
 
   # Serveur VPN OpenVPN
   openvpn:
@@ -102,6 +110,8 @@ services:
     volumes:
       - ./config/opnsense:/etc/nginx/conf.d
     restart: always
+    # Ajouter SSH sur ce conteneur
+    command: bash -c "apt-get update && apt-get install -y openssh-server && service ssh start && /bin/bash"
 
   # Machine Client
   client:
@@ -112,7 +122,7 @@ services:
         ipv4_address: 192.168.0.8
     environment:
       - DISPLAY
-    command: bash -c "apt-get update && apt-get install -y xfce4"
+    command: bash -c "apt-get update && apt-get install -y xfce4 openssh-server && service ssh start && /bin/bash"
     restart: always
 
 networks:
