--- a/Deploiement_de_machine/docker-compose.yml
+++ b/Deploiement_de_machine/docker-compose.yml
@@ -2,21 +2,24 @@ version: '3.8'
 
 services:
   # Serveur DNS
-  bind9:
-    container_name: my-dns
-    image: internetsystemsconsortium/bind9:9.18
-    networks:
-      internal_net:
-        ipv4_address: 192.168.0.2
+  dns:
+    container_name: dns
+    hostname: dns
+    image: technitium/dns-server:latest
     ports:
-      - "53:53/tcp"
-      - "53:53/udp"
-      - "127.0.0.1:953:953/tcp"
+      - "5380:5380/tcp"  # DNS web console (HTTP)
+      - "53:53/udp"      # DNS service (UDP)
+      - "53:53/tcp"      # DNS service (TCP)
+    environment:
+      - DNS_SERVER_DOMAIN=dns
+      # Vous pouvez configurer d'autres variables d'environnement si nécessaire
     volumes:
-      - ./config/named.conf.options:/etc/bind/named.conf.options
-      - ./config/named.conf.local:/etc/bind/named.conf.local
-      - ./config/db.my.domain:/etc/bind/db.my.domain
+      - config:/etc/dns  # Montée du volume pour la persistance des données de configuration
     restart: unless-stopped
+    sysctls:
+      - net.ipv4.ip_local_port_range=1024 65000
+    networks:
+      - internal_net  # Spécifier le réseau interne
 
     
   # Active Directory avec Samba
